tests/ui/link-native-libs/suggest-libname-only-1.stderr
warning: extern declarations without an explicit ABI are deprecated
  --> $DIR/suggest-libname-only-1.rs:6:1
   |
LL | extern { }
   | ^^^^^^ help: explicitly specify the "C" ABI: `extern "C"`
   |
   = note: `#[warn(missing_abi)]` on by default

error: could not find native static library `libfoo.a`, perhaps an -L flag is missing?
   |
   = help: only provide the library name `foo`, not the full filename

error: aborting due to 1 previous error; 1 warning emitted

